--- a/MBTA_Project.ipynb
+++ b/MBTA_Project.ipynb
@@ -65,7 +65,8 @@
         "                print(f\"  {description}\")\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    get_b_line_status()\n"
+        "    get_b_line_status()\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
