--- a/MBTA_Project.ipynb
+++ b/MBTA_Project.ipynb
@@ -66,22 +66,22 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    get_b_line_status()\n",
-        "\n"
+        "\n",
+        "print('bananas')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dH18gkOlHE1b",
-        "outputId": "9ecdefb8-376e-4245-c2e5-eded79f4750c"
+        "outputId": "652a1536-92ab-47ec-c32f-d46a9f5cd30f"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<built-in method keys of dict object at 0x7f0dd7b846c0>\n",
             "⚠️ Current B Line Alerts:\n",
             "- [SUSPENSION | Severity 7] Green Line: No train service between Medford/Tufts, Union Sq., and Park St., from 8 PM on Nov 4, through Nov 13, for track work. Use shuttle buses between Medford/Tufts & North Station. Use the Orange Line downtown. Union Sq riders use Rt 87 to Lechmere\n",
             "  C Branch eastbound service will be terminating at Kenmore. Riders can take any westbound B or D Branch train to Kenmore to board a train towards Cleveland Circle. \r\n",
@@ -96,6 +96,14 @@
             "Route 87 riders can connect to shuttles at Lechmere.\r\n",
             "Route 91 riders can connect to shuttles at East Somerville, the Red Line at Central, or the Orange Line at Sullivan Square. \r\n",
             "Route 109 riders can connect to shuttles at East Somerville, the Red Line at Harvard, or the Orange Line at Sullivan Square. \r\n",
+            "\n",
+            "Orange Line Access from Park St:\r\n",
+            "Riders can use the Winter Street Concourse to walk between the Green Line at Park St and the Orange Line at Downtown Crossing. The entrance to the Concourse is adjacent to the Green Line track with service towards Government Center and points north.\r\n",
+            " - As soon as you enter the concourse, turn right and exit through the faregate.\r\n",
+            "- Take Park elevator 804 to Tremont St and turn left.\r\n",
+            " - Turn right on Winter St.\r\n",
+            " - Turn left on Washington St and go approximately 200 to 300 ft.\r\n",
+            " - Turn right at the Franklin St plaza and take DTX elevator 891 to the Orange Line northbound platform.\r\n",
             "\n",
             "Free Bluebikes Access:\r\n",
             "During this closure, the City of Boston is offering a promotion code for up to five free Bluebikes unlocks, MBTAGREEN114. After 30 minutes, a charge of $0.25/minute will be applied.\r\n",
@@ -137,7 +145,8 @@
             "- North Station (Transfer within Station to Orange Line)\r\n",
             "- Haymarket (Transfer within Station to Orange Line.)\r\n",
             "- Government Center (use State, 0.2 mi.)\r\n",
-            "- Park Street (use the Winter St Concourse to Downtown Crossing, 0.2 mi.)\n"
+            "- Park Street (use the Winter St Concourse to Downtown Crossing, 0.2 mi.)\n",
+            "bananas\n"
           ]
         }
       ]
